--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-body{
-    background-image: url("assets/title-screen-background.jpeg")
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Henny Penny', cursive;
+    text-align: center;
 }
 
-img {
+body{
+    background-image: url("assets/title-screen-background.jpeg");
+    size: cover;
+    background-repeat: no-repeat;
+}
+
+.card {
     width: 200px;
     height: 300px;
 }
 
 .ascii-art{
-    display: flex;
+    display: block;
     font-family: monospace;
     white-space: pre;
     background: white;
@@ -19,13 +29,45 @@ img {
     justify-content: center;
 }
 
-#title{
+.asset{
+    width: 100px;
+    height: 100px;
+}
+#title-screen{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
     align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-input{
-    text-align: center;
+#title-div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
+#money-div{
+    display: flex;
+    justify-content: center;
+}
+.break{
+    flex-basis: 100%;
+    height: 0px;
+}
+
+.fill{
+    flex-basis: 100%;
+    height: 160px;
+}
+#money-div{
+}
+
+#dealing-with{
+    width: 1100px;
+}
+
+#the-devil{
+    width: 800px;
+}
+
