--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body{
     background-repeat: no-repeat;
 }
 
+p{
+    font-size: 20px;
+}
+
+button{
+    width: 100px;
+}
 .card {
     width: 200px;
     height: 300px;
@@ -60,9 +67,23 @@ body{
     flex-basis: 100%;
     height: 160px;
 }
-#money-div{
+
+.half-fill{
+    flex-basis: 100%;
+    height: 20px;
 }
 
+#money-div{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+#in-game-screen{
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: end;
+}
 #dealing-with{
     width: 1100px;
 }
