--- a/style.css
+++ b/style.css
@@ -43,19 +43,21 @@ button{
     grid-template-rows: repeat(12,1fr);
     align-content: stretch;
     justify-content:stretch;
+    height: 100vh;
 }
 
 #full-screen{
-    grid-column: 12 / 13;
-    grid-row: 5 / 6;
+    grid-column: 10 / 12;
+    grid-row: 10 / 11;
 }
+
 #title-div{
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
+    overflow: hide;
 }
 
 #money-div{
-    display: flex;
-    justify-content: center;
+    grid-column: 10/13;
 }
 .break{
     flex-basis: 100%;
